#HCMSST-1431 - Ajuste do SST Consumer para uso do Java OpenJDK 11